feat: change node layout and separate arena